# tpx3_Iumi

./: README.md  pyproject.toml
src/tpx3_iumi/: data_processing.py  read_tpx3.py
